--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -28,13 +28,13 @@
     "https://*.gstatic.com/*"
   ],
   "background": {
-    "service_worker": "background.js",
+    "service_worker": "src/scripts/background.ts",
     "type": "module"
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["src/scripts/content.ts"]
     }
   ],
   "web_accessible_resources": [
