--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -4,7 +4,10 @@
   "version": "1.0.1",
   "description": "Helps you set intentions on websites like youtube, tiktok, etc. to avoid doomscrolling.",
   "action": {
-    "default_popup": "index.html"
+    "default_title": "Open Intention Setting"
+  },
+  "side_panel": {
+    "default_path": "index.html"
   },
   "icons": {
     "16": "icons/32.png",
@@ -18,9 +21,9 @@
     "storage",
     "offscreen",
     "tabs",
-    "windows",
     "activeTab",
-    "scripting"
+    "scripting",
+    "sidePanel"
   ],
   "host_permissions": [
     "https://*.firebaseapp.com/*",
