--- a/extension/package.json
+++ b/extension/package.json
@@ -11,6 +11,7 @@
     "zip": "cd build && zip -r ../extension.zip . -x '*.map'"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@tailwindcss/vite": "^4.1.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
