feat: chatbot tab with shadcn resizeable panel

--- a/extension/.env.example
+++ b/extension/.env.example
@@ -6,6 +6,9 @@ VITE_PREMIUM_STRIPE_PRICE_ID=price_1Se6QBTX0mvwmvJqI1 # TODO: Replace with Strip
 VITE_PREMIUM_PRICE_TYPE=subscription # TODO: Replace with 'subscription' or 'payment' dependng on price_id
 VITE_PREMIUM_ITEM_DESCRIPTION=product_description # TODO: Replace. Just used for transaction metadata — does nothing functional.
 
+# OpenAI
+VITE_OPENAI_API_KEY=sk-your-api-key # TODO: Replace
+
 # Testing flags
 VITE_TEST_FLAG=false # Whether we're in test mode
 VITE_TEST_FLAG_PREMIUM=true # Whether we have premium in test mode
