--- a/extension/package.json
+++ b/extension/package.json
@@ -18,8 +18,10 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
+    "openai": "^6.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-resizable-panels": "^2.0.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
